--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "date-fns": "^4.1.0",
         "laravel-echo": "^2.0.2",
         "pusher-js": "^8.4.0"
     }
